Fixed the extra space at the right using cutted images intead

--- a/styles.css
+++ b/styles.css
@@ -81,6 +81,9 @@ body {
   padding: 200px 10px 120px 10px;
   background-color: #1c1a19;
   gap: 25px;
+  background-image: url(media/headline-mobile.png);
+  background-repeat: no-repeat;
+  background-position: bottom right ;
 }
 
 .headline-info {
@@ -141,7 +144,7 @@ body {
   width: 25px;
 }
 
-.background-img1 {
+/*.background-img1 {
   background-image: url('media/illustration-heading.png');
   background-repeat: no-repeat;
   position: absolute;
@@ -150,7 +153,7 @@ body {
   left: 55%;
   top: 380px;
   transform: scale(0.85);
-}
+}*/
 
 /* Middle Section */
 .works {
@@ -411,6 +414,10 @@ body {
   gap: 12px;
   width: 100%;
   background: #1c1a19;
+  background-image: url('media/about-me-mobile.png');
+  background-repeat: no-repeat;
+  background-position: right;
+  background-position-y: 320px ;
 }
 
 .about-me-title {
@@ -449,7 +456,7 @@ body {
   margin: 20px 140px 0 0;
 }
 
-.background-img2 {
+/*.background-img2 {
   background-image: url('media/ilustration-about-me.png');
   background-repeat: no-repeat;
   width: 100%;
@@ -458,7 +465,7 @@ body {
   left: 50%;
   top: 4550px;
   transform: scale(0.85);
-}
+}*/
 
 .vector-line2 {
   width: 95%;
@@ -674,7 +681,7 @@ button:active {
     width: 45%;
   }
 
-  .background-img1 {
+  /*.background-img1 {
     background-image: url('media/illustration-heading.png');
     background-repeat: no-repeat;
     position: absolute;
@@ -683,7 +690,7 @@ button:active {
     left: 65%;
     top: 100px;
     transform: scale(1.8);
-  }
+  }*/
 
   .work1 {
     display: grid;
@@ -770,7 +777,7 @@ button:active {
     grid-row: 2/3;
   }
 
-  .background-img2 {
+  /*.background-img2 {
     background-image: url('media/ilustration-about-me.png');
     background-repeat: no-repeat;
     width: 100%;
@@ -779,11 +786,14 @@ button:active {
     left: 70%;
     top: 2400px;
     transform: scale(1.2);
-  }
+  }*/
 
   .about-me {
     align-items: flex-start;
     padding: 130px 100px 80px 100px;
+    background-image: url('media/ilustration-about-me.png');
+    background-repeat: no-repeat;
+    background-position: right;
   }
 
   .about-me-description {
